fix alignment of loginLink

--- a/src/components/signup/Signup.scss
+++ b/src/components/signup/Signup.scss
@@ -4,7 +4,6 @@
 	background-color: #f2eee9;
 	border: 1px solid #eee;
 	padding: 40px 40px;
-	// gap: 20px;
 
 	&__heading {
 		font-size: 24px;
@@ -49,6 +48,7 @@
 		}
 	}
 	&__loginLink {
+		padding-top: 10px;
 		a {
 			&:visited {
 				color: green;
